Correct OpenSSL exceptions to be Copyleft
These are exceptions to Copyleft licenses that strictly apply to
OpenSSL and do not turn the licenses in a some Copyleft Limited license.
Therefore I am making these Copyleft instead of Copyleft Limited.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/openssl-exception-gpl-2.0-plus.yml
+++ b/src/licensedcode/data/licenses/openssl-exception-gpl-2.0-plus.yml
@@ -1,7 +1,7 @@
 key: openssl-exception-gpl-2.0-plus
 short_name: OpenSSL exception to GPL 2.0 or later
 name: OpenSSL exception to GPL 2.0 or later
-category: Copyleft Limited
+category: Copyleft
 owner: magnumripper
 homepage_url: https://github.com/magnumripper/JohnTheRipper/blob/1.8.0/doc/LICENSE
 is_exception: yes
