--- a/src/licensedcode/data/licenses/openssl-exception-agpl-3.0.yml
+++ b/src/licensedcode/data/licenses/openssl-exception-agpl-3.0.yml
@@ -1,7 +1,7 @@
 key: openssl-exception-agpl-3.0
 short_name: OpenSSL exception to AGPL 3.0
 name: OpenSSL exception to AGPL 3.0
-category: Copyleft Limited
+category: Copyleft
 owner: MongoDB
 is_exception: yes
 spdx_license_key: LicenseRef-scancode-openssl-exception-agpl-3.0
