--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -88,7 +88,7 @@ install_requires =
     plugincode >= 21.1.21
     publicsuffix2
     pyahocorasick >= 1.4.0, < 1.5
-    pygmars >= 0.7.b3
+    pygmars >= 0.7.0
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0, < 3.0.0
