--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,6 @@ patch==1.16
 parameter-expansion-patched==0.2.1b4
 pdfminer.six==20201018
 pefile==2021.5.24
-pip==21.1.2
 pkginfo==1.7.0
 pluggy==0.13.1
 plugincode==21.1.21
@@ -56,7 +55,7 @@ publicsuffix2==2.20191221
 pyahocorasick==1.4.2
 pycparser==2.20
 Pygments==2.9.0
-pygmars==0.7.0b3
+pygmars==0.7.0
 pymaven-patch==0.3.0
 pyparsing==2.4.7
 pytz==2021.1
@@ -66,8 +65,6 @@ regipy==1.9.3
 requests==2.25.1
 rpm-inspector-rpm==4.16.1.3.210404
 saneyaml==0.5.2
-setuptools==57.0.0
-setuptools_scm==6.0.1
 six==1.16.0
 sortedcontainers==2.4.0
 soupsieve==2.2.1
@@ -84,6 +81,5 @@ urllib3==1.26.5
 urlpy==0.5
 wcwidth==0.2.5
 webencodings==0.5.1
-wheel==0.36.2
 xmltodict==0.12.0
 zipp==3.4.1
