Improve copyright detection
These are corner cases found in handling "ignorables" clues for
the latest licenses and license rules.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/ampasbsd-AMPASBSD.yml
+++ b/tests/cluecode/data/copyrights/ampasbsd-AMPASBSD.yml
@@ -3,9 +3,9 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 2006 Academy of Motion Picture Arts and Sciences 'A.M.P.A.S.
+  - Copyright (c) 2006 Academy of Motion Picture Arts and Sciences
 holders:
-  - Academy of Motion Picture Arts and Sciences 'A.M.P.A.S.
+  - Academy of Motion Picture Arts and Sciences
 holders_summary:
-  - value: Academy of Motion Picture Arts and Sciences 'A.M.P.A.S.
+  - value: Academy of Motion Picture Arts and Sciences
     count: 1
