Update license ignorable clues
Thse are now aligned with the latest copyright detection

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/bsd-4-clause-shortened.yml
+++ b/src/licensedcode/data/licenses/bsd-4-clause-shortened.yml
@@ -6,3 +6,6 @@ owner: Regents of the University of California
 spdx_license_key: BSD-4-Clause-Shortened
 other_urls:
     - https://metadata.ftp-master.debian.org/changelogs//main/a/arpwatch/arpwatch_2.1a15-7_copyright
+ignorable_authors:
+  - the University of California, Lawrence Berkeley Laboratory and its contributors
+
