--- a/src/licensedcode/data/licenses/google-maps-tos-2018-02-07.yml
+++ b/src/licensedcode/data/licenses/google-maps-tos-2018-02-07.yml
@@ -8,3 +8,17 @@ spdx_license_key: LicenseRef-scancode-google-maps-tos-2018-02-07
 text_urls:
     - https://developers.google.com/maps/terms-20180207
 minimum_coverage: 90
+ignorable_authors:
+  - the U.S. Department of State. Remove
+ignorable_copyrights:
+  - (c) Google Australia Pty Ltd.
+ignorable_holders:
+  - Google Australia Pty Ltd.
+ignorable_urls:
+  - http://developers.google.com/maps/maps-api-list
+  - http://developers.google.com/maps/terms
+  - http://www.google.com/intl/en/about/company/software-principles.html
+  - http://www.google.com/policies/privacy
+  - https://developers.google.com/products/
+  - https://www.google.com/maps
+
