Improve existing rule ignorables
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/rules/bsd-original-uc_12.yml
+++ b/src/licensedcode/data/rules/bsd-original-uc_12.yml
@@ -1,2 +1,5 @@
 license_expression: bsd-original-uc
 is_license_notice: yes
+ignorable_authors:
+  - the University of California, Lawrence Berkeley Laboratory
+
