--- a/src/licensedcode/data/rules/bsd-original-uc_23.yml
+++ b/src/licensedcode/data/rules/bsd-original-uc_23.yml
@@ -5,3 +5,5 @@ minimum_coverage: 90
 notes: this is a fragment seen in X11
 ignorable_authors:
     - the Computer Systems Engineering group at Lawrence Berkeley Laboratory
+    - the University of California, Lawrence Berkeley Laboratory
+
