--- a/src/licensedcode/data/rules/bsd-original-uc_7.yml
+++ b/src/licensedcode/data/rules/bsd-original-uc_7.yml
@@ -2,3 +2,6 @@ license_expression: bsd-original-uc
 is_license_text: yes
 relevance: 100
 minimum_coverage: 90
+ignorable_authors:
+  - the University of California, Lawrence Berkeley Laboratory and its contributors
+
