--- a/src/licensedcode/data/rules/bsd-original_25.yml
+++ b/src/licensedcode/data/rules/bsd-original_25.yml
@@ -1,3 +1,6 @@
 license_expression: bsd-original
 is_license_text: yes
 minimum_coverage: 90
+ignorable_authors:
+  - the University of California, Berkeley, Intel Corporation, and its contributors
+
