--- a/setup.cfg
+++ b/setup.cfg
@@ -198,6 +198,8 @@ scancode_output =
     template = formattedcode.output_html:CustomTemplateOutput
     debian = formattedcode.output_debian:DebianCopyrightOutput
     yaml = formattedcode.output_yaml:YamlOutput
+    cyclonedx = formattedcode.output_cyclonedx:CycloneDxOutput
+    cyclonedx-json = formattedcode.output_cyclonedx:CycloneDxJsonOutput
 
 
 [tool:pytest]
