Align tests expectation with latest license rules
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/ascender-eula.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/ascender-eula.txt.yml
@@ -1,4 +1,4 @@
 license_expressions:
   - proprietary-license
-  - commercial-license
+  - proprietary-license
 notes: this is a license from fossology license reference Ascender-EULA (Ascender EULA) http://www.ascendercorp.com/services/licensing/eula-5/
