--- a/tests/licensedcode/data/datadriven/lic4/no-license-with-stop-words.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic4/no-license-with-stop-words.txt.yml
@@ -1,3 +1,4 @@
 notes: nothing should be detected here
  as "License a Private" should NOT match "license Private"
  as there is a stopword inside and this is a short rule.
+expected_failure: yes
