--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/e/e2fsprogs/stable_e2fsprogs-l10n.copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/e/e2fsprogs/stable_e2fsprogs-l10n.copyright-detailed.expected.yml
@@ -1,6 +1,6 @@
 -
 -
-- gpl-1.0-plus AND gpl-2.0
+- gpl-2.0 AND gpl-2.0
 - |
   Copyright (c) 2003-2006 Theodore Ts'o <tytso@mit.edu>
   Copyright (c) 1997-2003 Yann Dirson <dirson@debian.org>
