--- a/src/licensedcode/data/licenses/bohl-0.2.yml
+++ b/src/licensedcode/data/licenses/bohl-0.2.yml
@@ -7,8 +7,8 @@ owner: The Balloon
 text_urls:
     - https://web.archive.org/web/20140426215620/http://www.balloonboard.org/docs/Balloon_License_0v2.pdf
 ignorable_copyrights:
-    - Copyright © 2006 2007 iTechnic Ltd
+    - Copyright (c) 2006 2007 iTechnic Ltd
 ignorable_holders:
     - iTechnic Ltd
 ignorable_urls:
-    - www.balloonboard.org
+    - http://www.balloonboard.org/
