Add compiledcode plugin
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -102,6 +102,8 @@ install_requires =
     zipp >= 3.0.0; python_version < "3.9"
     extractcode[full] >= 21.7.23
     typecode[full] >= 21.6.1
+    pyelftools
+    compiledcode
 
 
 [options.packages.find]
